Fix header overflow

--- a/projects/ngx-material/styles/_headers.scss
+++ b/projects/ngx-material/styles/_headers.scss
@@ -13,6 +13,7 @@
 
   > .column {
     flex-shrink: 1;
+    min-width: 0;
 
     .title {
       font-weight: 500;
